Sugati/src/objects/Client_Payment_Detail__c.object
<CustomObject>
    <fields>
        <fullName>CPD_Booking_Reference_Number__c</fullName>
        <formula>CPD_Client_Payment__r.CP_Opportunity__r.O_Reference_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Booking Reference Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPD_Client_Name__c</fullName>
        <formula>TEXT(CPD_Group_Member__r.GM_Contact__r.Salutation)   +&apos; &apos;+ CPD_Group_Member__r.GM_Contact__r.FirstName +&apos; &apos;+ CPD_Group_Member__r.GM_Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPD_Client_Payment__c</fullName>
        <label>Client Payment</label>
        <referenceTo>Client_Payment__c</referenceTo>
        <relationshipLabel>Client Payment Details</relationshipLabel>
        <relationshipName>Client_Payment_Details</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CPD_Departure_Date__c</fullName>
        <formula>CPD_Client_Payment__r.CP_Opportunity__r.O_Departure_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Departure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CPD_Group_Member__c</fullName>
        <label>Group Member</label>
        <referenceTo>Group_Member__c</referenceTo>
        <relationshipLabel>Client Payment Details</relationshipLabel>
        <relationshipName>Client_Payment_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CPD_Opportunity__c</fullName>
        <formula>CPD_Client_Payment__r.CP_Opportunity__c</formula>
        <label>Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPD_Quote_Number__c</fullName>
        <formula>CPD_Client_Payment__r.CP_Opportunity__r.O_Quote_No__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Client Payment Detail</label>
    <nameField>
        <displayFormat>CPD-{00000000}</displayFormat>
        <label>Client Payment Detail Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Payment Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>